@@ -45,8 +45,6 @@ PIG-1085:  Pass JobConf and UDF specific configuration information to UDFs
 
 OPTIMIZATIONS
 
-PIG-922: Logical optimizer: push up project (daijy)
-
 BUG FIXES
 
 PIG-1105: COUNT_STAR accumulate interface implementation cases failure
@@ -84,6 +82,8 @@ PIG-1064: Behaviour of COGROUP with and without schema when using "*" operator
 Release 0.6.0 - Unreleased
 
 INCOMPATIBLE CHANGES
+
+PIG-922: Logical optimizer: push up project (daijy)
 
 IMPROVEMENTS
 
@@ -182,6 +182,8 @@ PIG-979: Acummulator Interface for UDFs (yinghe via daijy)
 
 OPTIMIZATIONS
 
+PIG-922: Logical optimizer: push up project (daijy)
+
 BUG FIXES
 
 PIG-1080: PigStorage may miss records when loading a file (rding via olgan)
@@ -250,6 +252,9 @@ PIG-790: Error message should indicate in which line number in the Pig script th
 PIG-1001: Generate more meaningful error message when one input file does not exist (daijy)
 
 PIG-1060: MultiQuery optimization throws error for multi-level splits (rding via daijy)
+
+PIG-1128: column pruning causing failure when foreach has user-specified
+schema (daijy)
 
 Release 0.5.0
 
